Upadate work Flow

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "prisma generate && next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fix":"npx prisma migrate reset && npx prisma migrate dev "
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
     "@clerk/themes": "^2.3.3",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -26,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@uiw/react-md-editor": "^4.0.8",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2pdf": "^0.0.11",
@@ -34,6 +37,9 @@
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
+    "pdf2json": "^3.2.0",
+    "pdfjs-dist": "^5.4.54",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
@@ -42,6 +48,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^4.0.10"
   },
   "devDependencies": {
