--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "fix":"npx prisma migrate reset && npx prisma migrate dev "
+    "fix": "npx prisma migrate reset && npx prisma migrate dev "
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
@@ -31,6 +31,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^157.0.0",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.3",
     "inngest": "^3.40.1",
